# development-DualCube

./: .gitattributes  .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
dualcube/core/: Cargo.toml
dualcube/core/src/: TODO_loops.rs  dual.rs  elastica.rs  feature.rs  field.rs  layout.rs  lib.rs  polycube.rs  quad.rs  solutions.rs
dualcube/core/src/skeleton/: boundary_loop.rs  connectivity_surgery.rs  contraction.rs  cross_parameterize.rs  curve_skeleton.rs  embeddability.rs  generate_loops.rs  manipulation.rs  mod.rs  orthogonalize.rs  patch.rs  simplify.rs  skel_layout.rs  volume_collapse.rs  voxelize.rs
dualcube/core/src/skeleton/cross_parameterize/: boundary_walk.rs  coordination.rs  cutting_plan.rs  disk_boundary.rs  duplicate_cut_vertices.rs  geodesic.rs  harmonic.rs  internal_edges.rs  mod.rs  virtual_mesh.rs
dualcube/gui/: Cargo.toml
dualcube/gui/assets/: flat.wgsl  toons.wgsl
dualcube/gui/src/: TODO_eval.rs  axes.rs  bloom.rs  colors.rs  controls.rs  jobs.rs  main.rs  render.rs  render_skeleton.rs  toons.rs  ui.rs
dualcube/io/: Cargo.toml
dualcube/io/src/: lib.rs
dualcube/io/src/formats/: apg.rs  backwards_compatability.rs  dcube.rs  dotgraph.rs  dsol.rs  flag.rs  hex.rs  loops.rs  nlr.rs  obj.rs  objplus.rs
utils/bevy_axes_gizmo/: Cargo.toml
utils/bevy_axes_gizmo/src/: lib.rs
utils/camera/: Cargo.toml
utils/camera/src/: control.rs  lib.rs  look_angles.rs  look_transform.rs  plugin.rs  transform.rs
utils/grapff/: Cargo.toml
utils/grapff/src/: lib.rs
utils/grapff/src/fixed/: mod.rs
utils/grapff/src/fluid/: mod.rs
utils/mehsh/: Cargo.toml  README.md
utils/mehsh/src/: lib.rs  tests.rs
utils/mehsh/src/integrations/: bevy.rs  obj.rs  petgraph.rs  stl.rs
utils/mehsh/src/mesh/: builder.rs  connectivity.rs  verification.rs
utils/mehsh/src/mesh/algo/: projection.rs  refinement.rs  triangulate.rs
utils/mehsh/src/mesh/algo/location/: face.rs  vert.rs
utils/mehsh/src/mesh/elem/: edge.rs  face.rs  vert.rs
utils/mehsh/src/utils/: geom.rs  ids.rs  primitives.rs
