[workspace]
resolver = "3"
members = [
    "dualcube/core",
    # "dualcube-cli",
    "dualcube/gui",
    "utils/mehsh",
    "utils/grapff",
]

[profile.release]
opt-level = 3
lto = true
incremental = true
codegen-units = 1
debug = 0
strip = "debuginfo"

[profile.dev]
opt-level = 3
lto = false
incremental = true
codegen-units = 256
debug = 0
strip = "debuginfo"

[profile.dev-thin]
inherits = "dev"
lto = "thin"

[workspace.lints.clippy]
# cargo                           = { priority = -1, level = "warn"}
complexity                      = { priority = -1, level = "warn"}
    type_complexity = "allow"
    too_many_arguments = "allow"
correctness                     = { priority = -1, level = "warn"}
# nursery                         = { priority = -1, level = "warn"}
# pedantic                        = { priority = -1, level = "warn"}
    missing_panics_doc = "allow"
    missing_errors_doc = "allow"
perf                            = { priority = -1, level = "warn"}
# restriction                     = { priority = -1, level = "warn"}
style                           = { priority = -1, level = "warn"}
    excessive_precision = "allow"
suspicious                      = { priority = -1, level = "warn"}
