# compile and run dev build: cargo run
# compile and run release build: cargo run --release
# profiling command: cargo samply --profile profiling

[workspace]
resolver = "3"
members = [
    "dualcube/core",
    # "dualcube-cli",
    "dualcube/gui",
    "utils/mehsh",
    "utils/grapff",
]

[profile.release]
opt-level = 2
lto = "thin"
incremental = false
codegen-units = 1
debug = 0
strip = "debuginfo"

[profile.release-fast]
inherits = "release"
incremental = true
codegen-units = 4

[profile.profiling]
inherits = "release"
codegen-units = 4
debug = 2
strip = false

[profile.dev]
opt-level = 0
lto = false
incremental = true
codegen-units = 16
debug = 0
strip = "debuginfo"



[workspace.lints.clippy]
# cargo                           = { priority = -1, level = "warn"}
complexity                      = { priority = -1, level = "warn"}
    type_complexity = "allow"
    too_many_arguments = "allow"
correctness                     = { priority = -1, level = "warn"}
# nursery                         = { priority = -1, level = "warn"}
# pedantic                        = { priority = -1, level = "warn"}
    missing_panics_doc = "allow"
    missing_errors_doc = "allow"
perf                            = { priority = -1, level = "warn"}
# restriction                     = { priority = -1, level = "warn"}
style                           = { priority = -1, level = "warn"}
    excessive_precision = "allow"
suspicious                      = { priority = -1, level = "warn"}

