[package]
name = "dualcube"
version = "0.1.0"
edition = "2021"

[dependencies]
mehsh = { path = "../../utils/mehsh", features = ["bevy", "obj", "stl", "petgraph"] }
grapff = { path = "../../utils/grapff" }
log = "0.4.27"
itertools = "0.14.0"
slotmap = "1.0.7"
ordered-float = "5.0.0"
bimap = "0.6.3"
rand = "0.9.1"
faer = "0.22.6"
faer_gmres = "0.3.1"
serde = "1.0.188"
bitcode = "0.6.6"
thiserror = "2.0.17"
orx-parallel = "3.4.0"

# For skeleton-based initialization  TODO: move to seperate crate?
petgraph = "0.8.3"
nalgebra = "0.33.2"
chull = "0.2.4"
bvh = "0.11.0"

[lints]
workspace = true
