[package]
name = "io"
version = "0.1.0"
edition = "2021"

[dependencies]
dualcube = { path = "../core" }
mehsh = { path = "../../utils/mehsh", features = ["bevy", "obj", "stl", "petgraph", "serde"] }
grapff = { path = "../../utils/grapff" }
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["rc", "derive"] }
serde_json = "1.0.137"
ordered-float = { version = "5.0.0", features = ["serde"]}
bimap = "0.6.3"
log = "0.4.27"
ryu = "1.0.19"
bitcode = "0.6.6"
zstd = "0.13.3"
slotmap = { version = "1.0.7", features = ["serde"] }
nalgebra = { version = "0.33.2", features = ["serde"] }
rmp-serde = { version = "1.3.0" }

[lints]
workspace = true