[package]
name = "smooth-bevy-cameras"
description = "A tiny Bevy plugin for an orbit camera controller."
version = "0.1.0"
repository = "https://github.com/maximsnoep/bevy-orbit-camera"
authors = ["Snoep <maxim@snoep.io>"]
keywords = ["bevy", "camera", "plugin"]
edition = "2024"
license = "MIT"

[dependencies.bevy]
version = "0.17.3"
default-features = false
features = ["bevy_pbr"]
