[package]
name = "mehsh"
version = "0.0.1"
edition = "2024"
description = "a meh mesh processing library in Rust"
license = "MIT"
repository = "https://github.com/maximsnoep/mehsh"
keywords = ["mesh", "geometry", "processing", "rust"]
categories = ["graphics", "data-structures"]

[features]
default = []
bevy = ["dep:bevy_math", "dep:bevy_color", "dep:bevy_gizmos", "dep:bevy_render", "dep:bevy_mesh", "dep:bevy_asset"]
petgraph = ["dep:petgraph"]
obj = ["dep:obj"]
stl = ["dep:stl_io"]
serde = ["dep:serde"]
all = ["bevy", "petgraph", "obj", "stl", "serde"]

[dependencies]
# core
itertools = "0.14.0"
rand = "0.9.1"
log = "0.4.27"
nalgebra = "0.33.2"
thiserror = "2.0.12"
slotmap = { version = "1.0.7", features = ["serde"] }
bimap = { version = "0.6.3", features = ["serde"] } # for face and vertex ID maps
kdtree = "0.7.0" # for vertex lookup
bvh = "0.11.0" # for face lookup
orx-parallel = "3.4.0"
# Optional features
bevy_math = { version = "0.17.3", optional = true }
bevy_color = { version = "0.17.3", optional = true }
bevy_gizmos = { version = "0.17.3", optional = true }
bevy_render = { version = "0.17.3", optional = true }
bevy_mesh = { version = "0.17.3", optional = true }
bevy_asset = { version = "0.17.3", optional = true }
petgraph = { version = "0.8.2", optional = true }
obj = { version = "0.10.2", optional = true }
stl_io = { version = "0.8.5", optional = true }
serde = { version = "1.0.188", optional = true }



[lints]
workspace = true